# DisplaySwitch

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  ROADMAP.md  cleanup.py  run_display_switch.bat  setup_env.bat  test_fluent_import.py
.github/workflows/: build.yml
Prototype/: main.py
Universal/: main.py
core_native/: CMakeLists.txt  README.md
core_native/include/displayswitch/: c_api.h  display_detector.h  edid_parser.h  wmi_brightness.h
core_native/src/: c_api.cpp  display_detector.cpp  edid_parser.cpp  gpu_info.cpp  vcp_controller.cpp
core_native/src/bindings/: python_bindings.cpp
core_native/src/platform/linux/: display_detector_linux.cpp  gpu_info_linux.cpp  vcp_controller_linux.cpp
core_native/src/platform/macos/: display_detector_mac.mm  gpu_info_mac.mm  vcp_controller_mac.mm
core_native/src/platform/windows/: display_detector_win.cpp  gpu_info_win.cpp  vcp_controller_win.cpp  wmi_brightness_win.cpp
core_native/tests/: CMakeLists.txt  test_edid_parser.cpp
script_version_v1/: README.txt  get_capabilities.py  monitor_control.py  set_brightness.bat  switch_to_mac.bat  switch_to_windows.bat
tauri_ui/: index.html  package-lock.json  package.json  topology_sample.html  tsconfig.json
tauri_ui/src/: App.svelte  main.ts
tauri_ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri_ui/src-tauri/capabilities/: default.json  desktop.json
tauri_ui/src-tauri/icons/: icon.icns
tauri_ui/src-tauri/src/: main.rs
tauri_ui/src/lib/: MonitorCard.svelte  ProfileBar.svelte  RenameDialog.svelte  SettingsPanel.svelte  StatusBar.svelte  TitleBar.svelte  ToastContainer.svelte  TopologyView.svelte  TrayPopup.svelte  ambientLight.ts  configStore.ts  i18n.ts  theme.ts  toast.svelte.ts  types.ts
v1/: DisplaySwitch_Fluent.spec  app_fluent.py  hook-qfluentwidgets.py  requirements.txt
v1/monitor_control/: __init__.py  backend.py
